# digital-trading-agreement

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/d1/: DTA_Global_D1.xlsx  DTA_Global_D1_metadata.json
data/d2/: Ecom_Panel_D2.xlsx  Ecom_Panel_D2_metadata.json
data/d3/: OECD_AI_D3.xlsx  OECD_AI_D3_metadata.json
scripts/: run_replication.py
src/trade_agsi/: __init__.py  config_load.py  embeddings.py  io_workbooks.py  manifold.py  panel_regression.py  pipeline.py  repo.py  strictness.py  topics.py  transport_weights.py
tests/: test_config_paths.py  test_transport_weights.py
